--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,3 @@
 [build]
-  command = "npm run server.js"
-  publish = "public"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
+  command = "npm run build"
+  publish = "/public"
