--- a/package.json
+++ b/package.json
@@ -1,27 +1,3 @@
-{
-  "name": "test",
-  "version": "0.1.0",
-  "description": "My Website",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "fastify": "^4.21.0",
-    "handlebars": "^4.7.8",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0"
-  },
-  "engines": {
-    "node": "20.x"
-  },
-  "repository": {
-    "url": "https://github.com/ATRKARAM/nextjs-blog-theme"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "netlify"
-  ]
+"scripts": {
+  "build": "node build"
 }
