--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   command = "node build"
-  publish = "/opt/build/repo/public"
+  commandOrigin = "config"
+  environment = "DEBUG"
+  publish = "/opt/build/repo/opt/build/repo/public"
+  publishOrigin = "config"
