--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-command = "npm start"
-publish = "/public"
+  command = "npm install && npm run build"
+  publish = "public"
+
+[dev]
+  command = "npm start"
