--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   command = "npm install && npm run build"
   publish = "/opt/build/repo/public"
+  functions = "functions"
+  runtime = "python-3.10"
 
 [dev]
   command = "python app.py"
